# gingereasy

./: .gitignore  Makefile  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  auth.py  database.py  main.py  models.py  pyproject.toml  railway.json  requirements.txt  schemas.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: ad633f9e3077_increase_neighborhood_and_frosting_type_.py
backend/routes/: auth.py
frontend/: Caddyfile  Dockerfile  Dockerfile.prod  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  railway.json  tsconfig.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  ImageUpload.jsx  ListingCard.jsx  ProtectedRoute.jsx  SearchFilters.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CreateListing.jsx  HomePage.jsx  ListingDetail.jsx  Login.jsx  Register.jsx
scripts/: pre-commit
