[project]
name = "gingerbread-backend"
version = "1.0.0"
description = "GingerEasy - Gingerbread House Listings API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.2",
    "python-multipart>=0.0.6",
    "alembic>=1.13.0",
    "boto3>=1.34.0",
]

[tool.uv]
dev-dependencies = []
